# -_-GPT-classification

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  test.py  wsgi.py
crawling/: Crawling_modules.py  Get_Database.py  main.py  test.py
crawling/crawler/: Daum_BLOGandCAFE.py  Naver_BLOGandCAFE.py
crawling/crawler/Crawling_Result/CONTENT_DATA/: 동수원병원_Youtube_Comment.csv  삼성톡스앤필_Youtube_Comment.csv  생기한의원_Youtube_Comment.csv  서울대병원_Youtube_Comment.csv  순천오병원_Youtube_Comment.csv  아이디병원_Naver_blog_test.xlsx  아이디병원_Youtube_Comment.csv
crawling/crawler/Crawling_Result/URL_DATA/: 동수원병원_Daum_blog.xlsx  동수원병원_Daum_cafe.xlsx  동수원병원_Youtube_Comment.xlsx  삼성톡스앤필_Youtube_Comment.xlsx  생기한의원_Youtube_Comment.xlsx  서울대병원_Youtube_Comment.xlsx  순천오병원_Youtube_Comment.xlsx  아이디병원_Naver_blog.xlsx  아이디병원_Youtube_Comment.xlsx
crawling/openApi/: Daum_blog.py  Naver_blog.py  YOUTUBE_comment.py  client_secret.json
model/: memoryContent.py
sentiment/: Get_Sentiment.py
sentiment/Morph/: KNU.py  getMorph.py  khaiii_morph.py
sentiment/data/KNU/: SentiWord_info.json
service/: analysis_service.py  cosine_similarity.py  generator_service.py  reputation_service.py
service/finetuning_model/: train_module.py
view/: analysis_view.py
view/api/: repu_view.py  textGen_view.py
